Setting card height to auto to avoid overlapping

--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ li a {
     margin-left: 32em;
     text-align: center;
     width: 40em;
-    height: 50em;
+    height: auto;
     margin-top: 3em;
 }
 
